make changes to logo and colors

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -8,7 +8,7 @@ $line-height-base: 1.6;
 
 // Colors
 $blue: #3b82f6;
-$indigo: #6366f1;
+$indigo: hsl(111deg 89% 15% / 86%);
 $purple: #a855f7;
 $pink: #ec4899;
 $red: #ef4444;
