--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -39,7 +39,7 @@ body{
     font-size: 1.3rem;
     font-weight: bold;
     letter-spacing: .5px;
-    background: #0A6775;
+    background: hsl(111deg 89% 15% / 86%);;
     border-radius: 30px;
     color: #fff;
     box-shadow: 3px 12px 20px #8e908fd4;
