--- a/public/old/css/main.css
+++ b/public/old/css/main.css
@@ -1,11 +1,11 @@
 /*==========================================================
     Product Name: Productify::Production Management System
-    Created By: Codeshaper
-    Envato Profile: https://themeforest.net/user/codeshaperbd
-    Website: http://codeshaper.net
+    Created By: Riverine Technologies
+    Envato Profile: https://themeforest.net/user/Riverine Technologiesbd
+    Website: http://Riverine Technologies.net
     Description: Productify is a production management system build to simplify production or manufacturing process. Productify is lightweight, secure and fast and based on laravel.
     Version: v1.0
-    Support: https://codeshaper.net/contact-us
+    Support: https://Riverine Technologies.net/contact-us
 ============================================================*/
 
 body{
